fix layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ section {
 }
 
 .v-center {
-    padding-top:50%;
+    padding-top:10%;
     font-size:70px;
 }
 
